--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+    implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
+
 }
 tasks.named('test') {
     useJUnitPlatform()
